frontend/src/assets/css/global.css
/* ... */
/*first used with sprites / item icons */
.hover-highlight-inner:hover {
    /*box-shadow: inset 10px 0 0 0px white;*/
    opacity: 1 !important;
    box-shadow: inset 0 0 7px white;
}

.highlight-selected-inner {
    border: 2px solid #4CAF50;
    box-shadow: inset 0 0 6px rgba(76, 175, 80, 0.6);
}

.dropdown-menu {
    /*background-color: #0b0b10;*/
}

/* if inputs are children of element with class */
.minified-inputs input, .minified-inputs select {
    margin-top: 6px;
    margin-bottom: 6px;
    height: 30px;
}

/* Buttons inside minified-inputs rows must match the input height */
.minified-inputs .input-group .btn,
.minified-inputs .d-flex > .btn {
    height: 30px;
    box-sizing: border-box;
}

.tooltip-inner {
    font-size: 15px;
    max-width: 600px;
}

/**/
/*tablesort*/
/**/
th[role=columnheader]:not(.no-sort) {
    cursor: pointer;
}

th[role=columnheader]:not(.no-sort):after {
    content: '';
    /*float: right;*/
    position: absolute;
    margin-left: 5px;

    margin-top: 7px;
    border-width: 0 4px 4px;
    border-style: solid;
    border-color: #828282 transparent;
    visibility: hidden;
    opacity: 0;
    -ms-user-select: none;
    -webkit-user-select: none;
    -moz-user-select: none;
    user-select: none;
}

th[aria-sort=ascending]:not(.no-sort):after {
    border-bottom: none;
    border-width: 4px 4px 0;
}

th[aria-sort]:not(.no-sort):after {
    visibility: visible;
    opacity: 0.4;
}

th[role=columnheader]:hover:not(.no-sort):after {
    visibility: visible;
    opacity: 1;
}

.header {
    margin-bottom: 1rem;
}


/**/
/* Navbar */
/**/

@media (min-width: 768px) {
    .navbar-vertical.navbar-expand-md.fixed-left:not([style*="display: none"]) ~ .main-content.navbar-collapsed {
        /*display: none !important;*/
        margin-left: 50px !important;
    }
}

@keyframes pulsate-highlight-navbar {
    0% {
        box-shadow: inset 0px 0px 0px rgba(255, 255, 255, .5);
    }
    50% {
        box-shadow: inset 0px 0px 0px rgba(255, 255, 255, .5);
    }
    100% {
        box-shadow: inset 0px 0px 20px rgba(255, 255, 255, 1);
    }
}

/*.navbar:not(.navbar-collapsed) {*/
/*    !*!* make it glow! *!*!*/
/*    animation: pulsate-highlight-navbar 60s ease-in-out infinite alternate;*/
/*}*/

.navbar.navbar-collapsed {
    width: 20px !important;

    -webkit-border-radius: 7px;
    -moz-border-radius: 7px;
    border-radius: 7px;
}

.navbar.navbar-collapsed:hover {
    -webkit-box-shadow: inset 0 0 30px #fff;
    -moz-box-shadow: inset 0 0 30px #fff;
    box-shadow: inset 0 0 30px #fff;
}

.navbar-contents.navbar-collapsed {
    display: none !important;
}

.navbar-chevron {
    filter: drop-shadow(0px 0px 20px rgb(255 243 0 / 1));
    animation: chevron-collapsed-shadow 1.5s ease-in-out infinite alternate !important;
}

@keyframes chevron-collapsed-shadow {
    from {
        filter: drop-shadow(0 0 5px #fff) drop-shadow(0 0 15px #e60073) drop-shadow(0 0 20px #e60073);
    }

    to {
        filter: drop-shadow(0 0 20px #fff) drop-shadow(0 0 25px #e60073) drop-shadow(0 0 40px #e60073);
    }
}

.leaflet-zoom-anim .leaflet-zoom-animated {
    transition: .5s !important;
}

/*pagination*/
.pagination .page-item {
    color: transparent;
}

.pagination {
    display: inline-flex;
}

.page, .page-link {
    padding: 0.4rem 0.75rem;
    border: 1px solid #ffffff6b !important;
}

.pagination .page-link {
    color: white;
    background-color: rgba(255, 255, 255, .03) !important;
}

.page-item.active .page, .page-item.active .page-link {
    border-color: #f6c343;
    color: #f6c343 !important;
    background-color: rgba(255, 255, 255, .2) !important;
}

.pagination .page-item.active .page-link {
    color: gray;
}

/*switch inputs - were too blended with white background */
.custom-control-input:disabled ~ .custom-control-label::before, .custom-control-input[disabled] ~ .custom-control-label::before {
    background-color: #f6f6f6;
}

/*makes element unselectable*/
.unselectable {
    -webkit-user-select: none;
    -khtml-user-select: none;
    -moz-user-select: -moz-none;
    -o-user-select: none;
    user-select: none;
}

#sidebar {
    -webkit-transition: opacity .3s linear;
    -moz-transition: opacity .3s linear;
    -o-transition: opacity .3s linear;
    transition: opacity .3s linear;
}

.sidebar-reset {
    opacity: .8;
}

.sidebar-normal {
    background-image: linear-gradient(to bottom right, rgb(21 21 21 / 90%), rgb(191 126 70 / 90%)), url(~@/assets/img/eq-wallpaper-1.jpg) !important;
    opacity: 1;
}

.sidebar-admin {
    background-image: linear-gradient(to bottom right, rgb(21 21 21 / 90%), rgb(152 80 80 / 90%)), url(~@/assets/img/eq-wallpaper-1.jpg) !important;
    opacity: 1;
}

/* Fix weird coloring issue*/
.input-group.input-group-merge > .input-group-prepend > .input-group-text {
    background-color: transparent !important;
    border: 1px solid transparent !important;
}

.input-group-flush > .input-group-append > .input-group-text, .input-group-flush > .input-group-prepend > .input-group-text {
    background-color: transparent !important;
    border: 1px solid transparent !important;
}

/*sets icons to be consistent across the different icon libraries*/
.navbar-nav .nav-link>.fe,
.navbar-nav .nav-link>.ra,
.navbar-nav .nav-link>.fa
{
    font-size: .8125rem;
    min-width: 14px !important;
}

/*white cards don't show transparent scrollbars*/
.card *::-webkit-scrollbar-thumb {
    background-color: rgb(0 0 0 / 20%);
}

/*slim up table padding for slim tables*/
.table-sm td, .table-sm th {
    padding: 0.5rem;
}

.table-sm input {
    height: calc(1em + 1rem) !important;
    padding: 0.25rem 0.5rem !important;
}

/*sticky tables */
.sticky table {
    position: relative;
}

.sticky thead {
    position: sticky;
    top: 0;
}

a:hover {
    cursor:pointer;
}
/* ... */

